<resources>
    <string name="app_name">군밤</string>
    <string name="app_title">군인 커뮤니티</string>
    <string name="login">로그인</string>
    <string name="signUp">회원가입</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="passwordCheck">비밀번호 확인</string>
    <string name="gotoLoginButton">로그인으로 이동</string>
    <string name="gotoLoginText">이미 아이디가 존재하다면?</string>
    <string name="logout">로그아웃</string>
    <string name="passwordReset">비밀번호 찾기</string>
    <string name="passwordResetButton">비밀번호 변경 링크 보내기</string>
    <string name="passwordResetText">비밀번호를 찾고자하는 아이디를 입력해주세요.</string>
    <string name="memberInit">회원정보</string>
    <string name="memberEdit">회원정보 수정</string>
    <string name="ok">완료</string>
    <string name="name">이름 ex)홍길동</string>
    <string name="phoneNumber">전화번호 ex)01012345678</string>
    <string name="birthDate">생년월일 ex)981201</string>
    <string name="joinDate">입대일 ex)230101</string>
    <string name="nickName">닉네임 [부적절한 닉네임은 변경될 수 있습니다]</string>
    <string name="dischargeDate">제대일 ex)250101</string>
    <string name="MemberInitHint">밑 칸은 군인이 아니실 경우, 입력을 하지 않으셔도 됩니다.</string>
    <string name="gallery">갤러리</string>
    <string name="picture">사진 촬영</string>
    <string name="description_info">정보</string>
    <string name="request_permission">카메라 권한이 필요합니다.</string>
    <string name="camera_error">이 장치는 Camera2 API를 지원하지 않습니다.</string>
    <string name="permission_msg">권한 2번 이상 거부시 재설치하여 재요청이 가능합니다.</string>
    <string name="main_text">제목</string>
    <string name="sub_text">내용을 입력해주세요.</string>
    <string name="write">글 쓰기</string>
    <string name="anonymous">익명</string>
    <string name="writer">작성자</string>
    <string name="uploadDate">yyyy-MM-dd HH:mm:ss</string>
    <string name="gap">|</string>
    <string name="content">내용</string>
    <string name="post_title">게시물 제목</string>
    <string name="recommendation">추천 수 : 0</string>
    <string name="board_1">자유게시판</string>
    <string name="board_2">군인게시판</string>
    <string name="board_3">비밀게시판</string>
    <string name="board_4">신병게시판</string>
    <string name="board_5">정보게시판</string>
    <string name="comment_hint">댓글을 입력하세요.</string>
    <string name="back">뒤로가기</string>
    <string name="comment">댓글</string>
    <string name="recommend">추천</string>
    <string name="please_grant_permission">권한을 허용해 주세요.</string>
    <string name="admin">관리자</string>
    <string name="admin_menu_1">테스트 게시물 10개 작성</string>
    <string name="admin_menu_2">엑티비티 테스트</string>
    <string name="admin_menu_3">딥러닝 테스트</string>
    <string name="admin_menu_4">키 해시</string>
    <string name="admin_menu_5">테스트 게시물 삭제</string>
    <string name="unit_board">부대</string>
</resources>