<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/memberInit"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/nickNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nickName"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phoneNumber"
                    android:inputType="phone"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/birthDateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/birthDate"
                    android:inputType="date"
                    android:minHeight="48dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/MemberInitHint" />

                <EditText
                    android:id="@+id/joinDateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/joinDate"
                    android:inputType="date"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/dischargeDateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/dischargeDate"
                    android:inputType="date"
                    android:minHeight="48dp" />


                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/draftImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:src="@drawable/draft_notice_image"
                        android:adjustViewBounds="true"/>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/checkButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:background="@drawable/button_rounded_bg"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        android:visibility="gone"
        android:id="@+id/draftCardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/pictureButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/picture"
                android:background="@drawable/button_rounded_bg"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/galleryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:background="@drawable/button_rounded_bg"
                android:layout_margin="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/permission_msg"
                android:layout_gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>