<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/passwordReset"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/passwordResetText"/>

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/passwordSendButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/passwordResetButton"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_rounded_bg"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gotoLoginText"/>

                <Button
                    android:id="@+id/gotoLoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gotoLoginButton"
                    android:background="@drawable/button_rounded_bg"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>