<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="15dp"
    android:layout_margin="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/commentAuthorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/writer" />

                <TextView
                android:id="@+id/commentUploadTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/uploadDate" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/replyButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/comment"
                android:src="@drawable/ic_baseline_add_comment_24"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/recommendButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/recommend"
                android:src="@drawable/bullet_shape"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/commentContentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/content" />




    </LinearLayout>
</androidx.cardview.widget.CardView>