<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ImageView
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:id="@+id/mainLogo"/>

    <TextView
        android:id="@+id/mainAppNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_toRightOf="@id/mainLogo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:text="@string/app_title"
        android:textColor="@color/black"
        android:layout_toRightOf="@id/mainLogo"
        android:layout_below = "@+id/mainAppNameTextView"
        android:id="@+id/mainAppTitleTextView"/>


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/postListFragment"
        android:name="military.gunbam.view.fragment.PostListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout = "@layout/fragment_post_list"
        android:layout_below = "@+id/mainAppTitleTextView"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:background="@drawable/button_rounded_bg"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:textColor="@color/white"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mainFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/write"
        app:srcCompat="@drawable/ic_baseline_post_add_24"
        android:backgroundTint="@color/green"/>

</RelativeLayout>